Fixes to mobile image visibility on cbp

--- a/src/components/post-link.module.css
+++ b/src/components/post-link.module.css
@@ -294,7 +294,7 @@
 }
 
 .cbpImageMobile {
-  display: none;
+  display: none !important;
   width: 100%;
   border-radius: 8px;
 }
